--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ Django==4.2.24
 djangorestframework==3.15.1
 supabase==2.3.4
 python-dotenv==1.0.1
-Pillow==10.3.0
+Pillow>=11.0.0,<12
+django-cors-headers==4.6.0
+psycopg2-binary==2.9.10
+dj-database-url==2.2.0
+whitenoise==6.7.0
